updated made section

--- a/about.html
+++ b/about.html
@@ -415,7 +415,7 @@
             </div>
         </div>
         <div class="last-words text-center">
-            <p>Made by: Kusumlata Bhatt</p>
+            <p>Made by: Tech Phantom</p>
         </div>
     </footer>
 
