--- a/contact.html
+++ b/contact.html
@@ -247,7 +247,7 @@
             </div>
         </div>
         <div class="last-words text-center">
-            <p>Made by: Kusumlata Bhatt</p>
+            <p>Made by: Tech Phantom</p>
         </div>
     </footer>
     <!--javascript-->
