--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
             </div>
         </div>
         <div class="last-words text-center">
-            <p>Made by: Kusumlata Bhatt</p>
+            <p>Made by: Tech Phantom</p>
         </div>
     </footer>
     <!--javascript-->
