--- a/services.html
+++ b/services.html
@@ -287,7 +287,7 @@
             </div>
         </div>
         <div class="last-words text-center">
-            <p>Made by: Kusumlata Bhatt</p>
+            <p>Made by: Tech Phantom</p>
         </div>
     </footer>
 
